spi protocol accounts now for the #bytes to be transferred e.g.; 83D40024 expects DO to transfer 4 bytes (0b00011 + 1)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 ./build
+.main.c.swp
+.vscode/launch.json
+.vscode/tasks.json
+build-pico-tpmsniffer-spi.sh
